refactor: InputView에서 이름 중복 및 딜러와 이름이 같으면 예외 발생하도록 변경